--- a/Documents/NewDesignDoc/DesignDocument.tex
+++ b/Documents/NewDesignDoc/DesignDocument.tex
@@ -45,7 +45,6 @@
 \input{overview.tex}  %% All tracks
 \input{requirements.tex}  %% All tracks (minimal for research track)
 \input{project.tex}   %% All tracks
-\input{revisions.tex}   %% All tracks
 \input{design.tex}  %% All tracks
 \input{testing.tex}  %% All tracks
 \input{prototypes.tex}  %% All tracks
@@ -73,6 +72,8 @@
 
 % In our style file, appendices are numbered with capital letters
 \appendix
+
+\input{revisions.tex} 
 
 \chapter{Product Description}
 \input{productdescription.tex}
