--- a/Documents/NewDesignDoc/annotated.tex
+++ b/Documents/NewDesignDoc/annotated.tex
@@ -7,4 +7,16 @@ Here is a list of all documented files with brief descriptions\-:\begin{DoxyComp
 \item\contentsline{section}{\hyperlink{check_login_8js}{check\-Login.\-js} \\*\-Contains functions for checking if a user is logged in }{\pageref{check_login_8js}}{}
 \item\contentsline{section}{\hyperlink{check_login_8php}{check\-Login.\-php} \\*\-Checks if a username is stored in the session data }{\pageref{check_login_8php}}{}
 \item\contentsline{section}{\hyperlink{config_8php}{config.\-php} \\*\-Global \-P\-H\-P configuration variables here }{\pageref{config_8php}}{}
+\item\contentsline{section}{\hyperlink{event_8php}{event.\-php} \\*\-Handles event data to and from the database }{\pageref{event_8php}}{}
+\item\contentsline{section}{\hyperlink{file_upload_8php}{file\-Upload.\-php} \\*\-Handles image upload to \-Mongo database }{\pageref{file_upload_8php}}{}
+\item\contentsline{section}{\hyperlink{image_8php}{image.\-php} \\*\-Handles image retrieval from \-Momgo database }{\pageref{image_8php}}{}
+\item\contentsline{section}{\hyperlink{index_8js}{index.\-js} \\*\-Contains functions for event set interaction on the index page }{\pageref{index_8js}}{}
+\item\contentsline{section}{\hyperlink{login_8js}{login.\-js} \\*\-Contains functions for logging in a user }{\pageref{login_8js}}{}
+\item\contentsline{section}{\hyperlink{login_8php}{login.\-php} \\*\-Removes user info from session data if user logs out, and logs in user }{\pageref{login_8php}}{}
+\item\contentsline{section}{\hyperlink{register_8js}{register.\-js} \\*\-Contains functions for registering a new user }{\pageref{register_8js}}{}
+\item\contentsline{section}{\hyperlink{register_8php}{register.\-php} \\*\-Attempts to register user in database }{\pageref{register_8php}}{}
+\item\contentsline{section}{\hyperlink{report_8js}{report.\-js} \\*\-Contains functions for submitting an event report and creating the custom report form for each event set }{\pageref{report_8js}}{}
+\item\contentsline{section}{\hyperlink{report_8php}{report.\-php} \\*\-Handles submitting a report to the database }{\pageref{report_8php}}{}
+\item\contentsline{section}{\hyperlink{report_map_leaflet_8js}{report\-Map\-Leaflet.\-js} \\*\-Contains a simplified map leaflet for the purpose of reporting an event }{\pageref{report_map_leaflet_8js}}{}
+\item\contentsline{section}{\hyperlink{view_event_8js}{view\-Event.\-js} \\*\-Contains functions for event set interaction on the index page }{\pageref{view_event_8js}}{}
 \end{DoxyCompactList}
