--- a/Documents/NewDesignDoc/project.tex
+++ b/Documents/NewDesignDoc/project.tex
@@ -5,7 +5,7 @@
 This section provides information about the team members, team member roles, project management approach and phase overview.
 
 \section{Team Member's Roles}
-Currently, Hannah Aker fulfills all team roles. Originally, Hannah Aker was the team leader and scrum master, and Jiasong Yan was a team member, and both were developer and testers.
+Hannah Aker fulfills all team roles, including scrum master, development and testing roles.
 
 \section{Project  Management Approach}
 The project will be managed using an Agile approach.  There will be 6 sprints total in this project, each lasting 3 weeks. The project backlog is owned by the team, and located on the team Github repository. All parties have access to the Sprint and Product Backlogs. Github issues will be used to track sprint tasks, bugs or trouble tickets, and user stories. The github repository is located at: \url{https://github.com/SDSMT-CSC464-F15/crowdscience} 
@@ -18,18 +18,11 @@ Stakeholders for this project are academics and researchers who would use the co
 \subsection{Customer or End User (Product Owner)}
 Product owners are Dr. Mengyu Qiao and Gail Schmidt, who will assist in the project in mentor roles. As needed, they will assist with prioritizing the product backlog, and identify important features. Dr. Mengyu Qiao's research interest area is closely related to crowdsourcing, and Gail Schmidt was a mentor and sponsor for the original project, the Landscape Change Mapper.
 
-\subsection{Management or Instructor (Scrum Master)}
-Originally, the scrum master in this project was Hannah Aker, who conducted sprint meetings and handled most client contact. Currently, there is no need for the role of scrum master to be assigned, Hannah Aker is fulfilling all team roles.
-
 \subsection{Investors}
 There are no investors in the project.
 
-
-\subsection{Developers --Testers}
-Originally developers and testers were Jiasong Yan and Hannah Aker. Currently, Hannah Aker fulfills all team roles. When the project is beta tested, testers may include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
-
 \section{Budget}
-There is no budget for this project, no new equipment, software, or liscence need to be purchased for the completition of this project.
+There is no budget for this project, no new equipment, software, or liscence need to be purchased for the completition of this project. Server access is provided by Gail Schmidt.
 
 \section{Intellectual Property and Licensing}
 Intellectual property rights belongs to South Dakota School of Mines and Technology. This project is a proof-of-concept project, and will not need special licensing.
@@ -145,9 +138,9 @@ A remote desktop connection is required to connect to the server hosting the cod
 \label{alg_rdp}    
 \begin{lstlisting}
 auto connect:i:1
-full address:s:52.23.113.55
-username:s:lcmapper
-password:s:jP\%7Fen\%JK
+full address:s: <IP address ommited>
+username:s: <username ommited>
+password:s: <password ommited>
 \end{lstlisting}
 \end{algorithm}
 
