--- a/Documents/NewDesignDoc/refman.tex
+++ b/Documents/NewDesignDoc/refman.tex
@@ -7,3 +7,15 @@
 \input{check_login_8js.tex}
 \input{check_login_8php.tex}
 \input{config_8php.tex}
+\input{event_8php.tex}
+\input{file_upload_8php.tex}
+\input{image_8php.tex}
+\input{index_8js.tex}
+\input{login_8js.tex}
+\input{login_8php.tex}
+\input{register_8js.tex}
+\input{register_8php.tex}
+\input{report_8js.tex}
+\input{report_8php.tex}
+\input{report_map_leaflet_8js.tex}
+\input{view_event_8js.tex}
