--- a/Documents/NewDesignDoc/revisions.tex
+++ b/Documents/NewDesignDoc/revisions.tex
@@ -7,6 +7,9 @@ This chapter includes information about the project revisions made regarding the
 \section{Overview and Concept of Operations}
 Team member revisions are noted in the ``Team Members and Team Name'' section.  Figure~\ref{overviewdesign_orginal} was replaced with Figure~\ref{overviewdesign}. The ``Event Set Editing'' subsection in the Major Components Section was removed. The remainder of the chapter was similarily revised to exclude this subsection.
 
+\subsection{Team Members and Team Name}
+Original team members were Jiasong Yan and Hannah Aker.
+
 \subsection{Event Set Editing}
 Administrators can edit existing events sets to refine what users report, and create new event sets to allow users to start reporting events.  Administrators will be able to moderate the events that users report.
 
@@ -52,3 +55,9 @@ As an administrator, I want to be able to edit existing event reports.
 
 \section{Project Overview}
 Team Member Roles were revised to reflect the team member removal. Timeline and Sprint Backlogs were revised to reflect the revised requirements and timeline.
+\subsection{Team Member's Roles}
+Originally, Hannah Aker was the team leader and scrum master, and Jiasong Yan was a team member, and both were developer and testers.
+\subsection{Management or Instructor (Scrum Master)}
+Originally, the scrum master in this project was Hannah Aker, who conducted sprint meetings and handled most client contact. Currently, there is no need for the role of scrum master to be assigned, Hannah Aker is fulfilling all team roles.
+\subsection{Developers --Testers}
+Originally developers and testers were Jiasong Yan and Hannah Aker. Currently, Hannah Aker fulfills all team roles. When the project is beta tested, testers may include SDSMT faculty and students, with faculty as administrators and students as ordinary users reporting events.
